Stripe Integration for Payements

--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "inngest": "^3.47.0",
-    "mongoose": "^9.0.1"
+    "mongoose": "^9.0.1",
+    "stripe": "^20.0.0",
+    "svix": "^1.82.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
