--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,16 @@
+version: "3.9"
+
 services:
-  server:
+  backend:
     build: ./server
-    container_name: server
+    container_name: backend
     ports:
-      - "5000:5000"
-    env_file:
-      - ./server/.env
+      - "3000:3000"
     restart: unless-stopped
 
-  client:
+  frontend:
     build: ./client
-    container_name: client
+    container_name: frontend
     ports:
-      - "3000:80"
-    env_file:
-      - ./client/.env
-    depends_on:
-      - server
+      - "80:80"
     restart: unless-stopped
