--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,13 +1,12 @@
-FROM node:20-alpine
-WORKDIR /app
+FROM node:18-alpine
 
-# Install deps
+WORKDIR /server
+
 COPY package*.json ./
 RUN npm install --production
 
-# Copy source
 COPY . .
 
-EXPOSE 5000
+EXPOSE 3000
 
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
