--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
   "type": "module",
   "dependencies": {
     "@clerk/express": "^1.7.55",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
@@ -24,6 +26,8 @@
     "inngest": "^3.47.0",
     "mongoose": "^9.0.1",
     "nodemailer": "^7.0.11",
+    "pg": "^8.18.0",
+    "prisma": "^7.3.0",
     "stripe": "^20.0.0",
     "svix": "^1.82.0"
   },
