--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "type": "module",
   "dependencies": {
     "@clerk/express": "^1.7.55",
+    "@prisma/client": "^6.19.2",
     "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "svix": "^1.82.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "prisma": "^6.19.2"
   }
 }
